// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deprecated components Paragraph with all props 1`] = `
<div
  bundle="unique_type__unique_bundle"
  className="MyCustomMapperComponent"
  entity={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
  index={15}
  paragraph={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
  testProp="testPropValue"
/>
`;

exports[`Deprecated components Paragraph with required props 1`] = `
<div
  bundle="unique_type__unique_bundle"
  className="MyCustomMapperComponent"
  entity={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
  index={0}
  paragraph={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
/>
`;

exports[`Deprecated components Paragraphs with all props 1`] = `
<section>
  <div
    bundle="unique_type__unique_bundle"
    className="MyCustomMapperComponent"
    entity={
      Object {
        "__hn": Object {
          "entity": Object {
            "bundle": "unique_bundle",
            "type": "unique_type",
          },
        },
      }
    }
    index={0}
    page={
      Object {
        "pageTest": true,
      }
    }
    paragraph={
      Object {
        "__hn": Object {
          "entity": Object {
            "bundle": "unique_bundle",
            "type": "unique_type",
          },
        },
      }
    }
    testProp="testPropValue"
  />
</section>
`;

exports[`Deprecated components Paragraphs with required props 1`] = `
<div
  bundle="unique_type__unique_bundle"
  className="MyCustomMapperComponent"
  entity={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
  index={0}
  page={undefined}
  paragraph={
    Object {
      "__hn": Object {
        "entity": Object {
          "bundle": "unique_bundle",
          "type": "unique_type",
        },
      },
    }
  }
/>
`;
